[package]
name = "some-embedded-scripting-language"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "some_embedded_scripting_language"
path = "src/lib.rs"

[[bin]]
name = "some_embedded_scripting_language_bin"
path = "src/main.rs"

[dependencies]
moniker = "0.5.0"
pretty = { version = "0.9.0", features = ["termcolor"] }
termcolor = "1.1.0"
